--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:text="Happy Birthday Friend"
         android:id="@+id/happy_birthday"
         android:textSize="32sp"
+        android:padding="20dp"
         android:textColor="@android:color/white"
         android:fontFamily="sans-serif-light"
         android:layout_width="wrap_content"
@@ -22,6 +23,7 @@
     <TextView
         android:text="From your friend"
         android:textSize="32sp"
+        android:padding="20dp"
         android:textColor="@android:color/white"
         android:fontFamily="sans-serif-light"
         android:layout_alignParentBottom="true"
