add increment and decrement button

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="218dp"
+        android:layout_marginTop="118dp"
         android:layout_marginBottom="16dp"
         android:fontFamily="sans-serif-light"
         android:text="QUANTITY"
@@ -33,23 +33,42 @@
         android:textColor="@android:color/white"
         android:textSize="32sp" />
 
+    <Button
+        android:id="@+id/increment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="168dp"
+        android:text="+"
+        android:textSize="32sp"
+        android:onClick="increment"/>
+
     <TextView
         android:id="@+id/quantity_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="265dp"
+        android:layout_marginTop="230dp"
         android:layout_marginBottom="16dp"
         android:fontFamily="sans-serif-light"
-        android:text="0"
         android:textColor="@android:color/white"
         android:textSize="32sp" />
+
+    <Button
+        android:id="@+id/decrement"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="265dp"
+        android:text="-"
+        android:textSize="32sp"
+        android:onClick="decrement"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="312dp"
+        android:layout_marginTop="320dp"
         android:layout_marginBottom="16dp"
         android:fontFamily="sans-serif-light"
         android:text="Price"
@@ -65,7 +84,6 @@
         android:layout_marginTop="359dp"
         android:layout_marginBottom="16dp"
         android:fontFamily="sans-serif-light"
-        android:text="0"
         android:textColor="@android:color/white"
         android:textSize="32sp" />
 
